Maximize, fix selectAll when opening + proper font & readable file names

--- a/src/renderer/style.less
+++ b/src/renderer/style.less
@@ -74,7 +74,7 @@ smalltxt {
     top: 50%;
     color: rgba(255, 255, 255, 0.794);
     font-size: 10px;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'OswaldL', sans-serif;
     transform: translate(0, -50%);
 }
 
@@ -118,11 +118,11 @@ exploreritem {
     position: relative;
     vertical-align: bottom;
     width: 100%;
-    height: 15px;
+    height: 17.5px;
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none;
-    font-size: 12px;
+    font-size: 14px;
     font-family: 'OswaldL', sans-serif;
     color: white;
     background-color: rgba(82, 82, 82, 0.0);
